[gd_scene load_steps=9 format=3 uid="uid://dcrdkh6aud3i1"]

[ext_resource type="Script" uid="uid://075bhpsyrleo" path="res://scripts/central_explosion.gd" id="1_eg57w"]
[ext_resource type="Texture2D" uid="uid://coqk5r4ftod1" path="res://resources/sprites/Sprites.png" id="1_si6ib"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eg57w"]
atlas = ExtResource("1_si6ib")
region = Rect2(32, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7inpy"]
atlas = ExtResource("1_si6ib")
region = Rect2(112, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f376v"]
atlas = ExtResource("1_si6ib")
region = Rect2(32, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y46xu"]
atlas = ExtResource("1_si6ib")
region = Rect2(112, 176, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_3732l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eg57w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7inpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f376v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y46xu")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bw2o2"]
size = Vector2(16, 16)

[node name="CentralExplosion" type="Area2D"]
collision_layer = 16
collision_mask = 37
script = ExtResource("1_eg57w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3732l")
autoplay = "default"
frame_progress = 0.913972

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_bw2o2")

[node name="RayCasts" type="Node2D" parent="."]

[node name="RayCastUp" type="RayCast2D" parent="RayCasts"]
target_position = Vector2(0, -16)
collision_mask = 6
collide_with_areas = true

[node name="RayCastDown" type="RayCast2D" parent="RayCasts"]
target_position = Vector2(0, 16)
collision_mask = 6
collide_with_areas = true

[node name="RayCastRight" type="RayCast2D" parent="RayCasts"]
target_position = Vector2(16, 0)
collision_mask = 6
collide_with_areas = true

[node name="RayCastLeft" type="RayCast2D" parent="RayCasts"]
target_position = Vector2(-16, 0)
collision_mask = 6
collide_with_areas = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
